.provarCaches/00D410000011HE0EAM/objects/rstk__contato__c.object
<CustomObject>
    <description>contato__c</description>
    <fields>
        <fullName>rstk__contato_acctgdateovr__c</fullName>
        <inlineHelpText>The Accounting Date Override as set in the source transaction.</inlineHelpText>
        <label>Accounting Date Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__contato_alllines__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When set, will process all Sales Order Lines associated with the Sales Order defined in this transaction.</inlineHelpText>
        <label>Process All Sales Order Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__contato_async__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, Asynchronous processing is applicable.</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__contato_extmessage__c</fullName>
        <inlineHelpText>Container Transaction Processing detailed Error Message.</inlineHelpText>
        <label>Extended Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__contato_iccontainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Inventory Container ID associated with this transaction.</inlineHelpText>
        <label>Inventory Container</label>
        <referenceTo>rstk__iccontainer__c</referenceTo>
        <relationshipLabel>Container Transaction Objects</relationshipLabel>
        <relationshipName>contatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__contato_message__c</fullName>
        <inlineHelpText>Container Transaction Processing Error Message.</inlineHelpText>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__contato_sohdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Sales Order associated with this transaction. Must be populated for Sales Order Issue.</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>rstk__sohdr__c</referenceTo>
        <relationshipLabel>Container Transaction Objects</relationshipLabel>
        <relationshipName>contatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__contato_soline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Sales Order Line associated with the Sales Order defined in this transaction. Must be populated in the SO Issue/SO Pack/SO Pick&amp;Pack transaction types if &apos;Process all Sales Orders Lines&apos; is not checked.</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>Container Transaction Objects</relationshipLabel>
        <relationshipName>contatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__contato_status__c</fullName>
        <inlineHelpText>Container Transaction processing status.</inlineHelpText>
        <label>Transaction Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Processed Successfully</fullName>
                </value>
                <value>
                    <fullName>Validation Error</fullName>
                </value>
                <value>
                    <fullName>Processing Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__contato_toiccontainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Destination Inventory Container associated with this transaction. Must be populated for Inventory Container Transfers.</inlineHelpText>
        <label>Destination Inventory Container</label>
        <referenceTo>rstk__iccontainer__c</referenceTo>
        <relationshipLabel>Container Transaction Objects (Destination Inventory Container)</relationshipLabel>
        <relationshipName>tocontatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__contato_tolocid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Destination Location ID associated with this transaction. Must be populated for Location Transfers.</inlineHelpText>
        <label>Destination Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>Container Transaction Objects</relationshipLabel>
        <relationshipName>contatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__contato_tolocnum__c</fullName>
        <inlineHelpText>The Destination Location Number associated with this transaction.</inlineHelpText>
        <label>Destination Location Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__contato_toproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Destination Project associated with this transaction. Must be populated for Project Transfers.</inlineHelpText>
        <label>Destination Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Container Transaction Objects</relationshipLabel>
        <relationshipName>contatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__contato_tosite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Destination Site associated with this transaction. Must be populated for Site Transfers.</inlineHelpText>
        <label>Destination Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Container Transaction Objects</relationshipLabel>
        <relationshipName>contatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__contato_txncomments__c</fullName>
        <inlineHelpText>Transaction Comments associated to the source transaction.</inlineHelpText>
        <label>Transaction Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__contato_txntype__c</fullName>
        <inlineHelpText>The source transaction type associated with this transaction. Options are: Site Transfer/Project Transfer/Location Transfer/Container Transfer/Create Inv Rec Batch/WO Issue/SO Issue/SO Pack/SO Pick&amp;Pack.</inlineHelpText>
        <label>Transaction Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Site Transfer</fullName>
                </value>
                <value>
                    <fullName>Project Transfer</fullName>
                </value>
                <value>
                    <fullName>Location Transfer</fullName>
                </value>
                <value>
                    <fullName>Container Transfer</fullName>
                </value>
                <value>
                    <fullName>Create Inventory Reconciliation Batch</fullName>
                </value>
                <value>
                    <fullName>Work Order Issue</fullName>
                </value>
                <value>
                    <fullName>Sales Order Issue</fullName>
                </value>
                <value>
                    <fullName>Sales Order Pack</fullName>
                </value>
                <value>
                    <fullName>Sales Order Pick &amp; Pack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__contato_wocst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Work Order associated with this transaction. Must be populated for Work Order Issue.</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>Container Transaction Objects</relationshipLabel>
        <relationshipName>contatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__contato_iccontainer__r.Name + &apos; &apos; + TEXT(NOW())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Container Transaction Object</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>rstk__contato_txntype__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Container_Transaction_Objects</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>rstk__contato_txntype__c</columns>
        <columns>rstk__contato_status__c</columns>
        <columns>rstk__contato_txncomments__c</columns>
        <columns>rstk__contato_acctgdateovr__c</columns>
        <columns>rstk__contato_message__c</columns>
        <columns>rstk__contato_iccontainer__c</columns>
        <columns>rstk__contato_sohdr__c</columns>
        <columns>rstk__contato_soline__c</columns>
        <columns>rstk__contato_alllines__c</columns>
        <columns>rstk__contato_wocst__c</columns>
        <filterScope>Mine</filterScope>
        <label>Container Transaction Objects</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Container Transaction Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>